tests/rosetta/out/Dart/99-bottles-of-beer.error
run error: exit status 254
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:23:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:12:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:18:30: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
    print(bottles((i as num) - 1) + ' of beer on the wall');
                             ^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:19:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) - 1;
                   ^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:24:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:48:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:77:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:82:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/99-bottles-of-beer.dart:86:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
